server/.happypack/s--891469885
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Map/Map.js: Unexpected token, expected , (52:12)

[0m [90m 50 | [39m        [90m// });[39m
 [90m 51 | [39m
[31m[1m>[22m[39m[90m 52 | [39m        [36mthis[39m[33m.[39mstate [33m=[39m {
 [90m    | [39m            [31m[1m^[22m[39m
 [90m 53 | [39m            countColumn[33m:[39m [33mMath[39m[33m.[39mceil(clientWidth [33m/[39m [35m50[39m)[33m,[39m
 [90m 54 | [39m            countRows[33m:[39m [33mMath[39m[33m.[39mceil(clientHeight [33m/[39m [35m50[39m)[33m,[39m
 [90m 55 | [39m            gridArray[33m:[39m [][33m,[39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Map/Map.js: Unexpected token, expected , (52:12)

[0m [90m 50 | [39m        [90m// });[39m
 [90m 51 | [39m
[31m[1m>[22m[39m[90m 52 | [39m        [36mthis[39m[33m.[39mstate [33m=[39m {
 [90m    | [39m            [31m[1m^[22m[39m
 [90m 53 | [39m            countColumn[33m:[39m [33mMath[39m[33m.[39mceil(clientWidth [33m/[39m [35m50[39m)[33m,[39m
 [90m 54 | [39m            countRows[33m:[39m [33mMath[39m[33m.[39mceil(clientHeight [33m/[39m [35m50[39m)[33m,[39m
 [90m 55 | [39m            gridArray[33m:[39m [][33m,[39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)